--- a/index.html
+++ b/index.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcular IMC</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
 
-    <section class="container">
+    <section class="calculadora-imc text-center container col-5 border ">
 
-        <div class="titulo"> Calcule seu - IMC </div>
-        
-        <div class="input">
-            <label>Seu Nome:</label>
-            <input type="text" id="nome">
-        </div>
+        <h3 class="titulo"> Calcule seu - IMC </h2>
 
-        <div class="input">
-            <label>Seu Peso:</label>
-            <input type="number" id="peso">
-        </div>
+            <div class="input-group mb-3 nome input">
+                <span class="input-group-text" id="basic-addon1">Nome:</span>
+                <input type="text" class="form-control" id="nome" >
+            </div>
+            <div class="input-group mb-3 input">
+                <span class="input-group-text">Peso:</span>
+                <input type="text" class="form-control" id="peso">
+            </div>
+            <div class="input-group mb-3 input">
+                <span class="input-group-text">Altura:
+                </span>
+                <input type="text" id="altura" class="form-control">
 
-        <div class="input">
-            <label>Sua Altura:</label>
-            <input type="number" id="altura">
-        </div>
+            </div>
 
-        <button id="calcular">Calcular Agora</button>
+            <button class="btn btn-outline-primary" id="calcular">Calcular Agora</button>
 
-        <div class="resultado" id="resultado"></div>
+            <div class="input-group">
+                <span class="input-group-text">Resultado</span>
+                <textarea class="resultado form-control" aria-label="With textarea resultado" id="resultado"></textarea>
+            </div>
 
-    </section>   
-<script src="index.js"></script>
+
+    </section>
+
+    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    </script>
 </body>
+
 </html>
