um pouco do mais um pouco

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </div>
     </nav>
 
-    <div class="row container-lg justify-content-center">
-        <div class="calculadora-imc p-1 text-center col-6 mb-3  border container offset-1 ">
+    <div class="row  container-fluid justify-content-center mt-5">
+        <div class="calculadora-imc  p-1 text-center col-6 mb-3  border container offset-3 ">
 
             <h3 class="titulo text-info "> Calcule seu - IMC </h3>
 
@@ -95,11 +95,9 @@
 
         <div class="card col-6  ml-3" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
+                <h5 class="card-title">O que é IMC ?</h5>
+                
+                <p class="card-text">O IMC é uma medida importante para detectar problemas de saúde relacionados ao peso. É uma medida geral e outras medidas devem ser levadas em consideração. Consultar um profissional de saúde é sempre recomendável para obter recomendações personalizadas</p>
                 <a href="#" class="card-link">Card link</a>
                 <a href="#" class="card-link">Another link</a>
             </div>
