--- a/index.html
+++ b/index.html
@@ -15,43 +15,24 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg mb-5 bg-body-tertiary">
+    <nav class="navbar bg-body-tertiary">
+
         <div class="container-fluid">
-            <nav class="navbar bg-body-tertiary">
-                <div class="container">
-                    <a class="navbar-brand" href="#">
-                        <img src="src/photo_2023-04-13_18-54-30.jpg" alt="IMC" width="70" height="54">
-                    </a>
-                </div>
-            </nav>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-
-
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+            <img src="src/photo_2023-04-13_18-54-30.jpg" alt="imc" width="65" height="49">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                
+                </li>
+            </ul>
         </div>
     </nav>
 
-
-    <h1></h1>
+<h1 id="h1">page em bootstrap para teste e pratica :)</h1>
 
     <div id="carouselExampleIndicators" class="carousel slide mb-5 mt-5">
         <div class="carousel-indicators">
@@ -86,40 +67,39 @@
         </button>
     </div>
 
-    <div class="row principal container-fluid justify-content-center  mt-5">
-        <div class="col-sm-3">
-            <div class="calculadora-imc shadow  p-1 text-center col-6 mb-3  border  mx-auto offset-1">
+    <div class=" principal container-fluid justify-content-center row p-5 mt-5">
 
-                <h3 class="titulo text-warning "> Calcule seu - IMC </h3>
+        <div class="calculadora-imc shadow   text-center col-5 mb-3  border  mx-auto offset-1">
 
-                <div class="input-group mb-3 nome input">
-                    <span class="input-group-text" id="basic-addon1 ">Nome:</span>
-                    <input type="text" class="form-control " id="nome">
-                </div>
-                <div class="input-group  mb-3 input">
-                    <span class="input-group-text">Peso:</span>
-                    <input type="text" class="form-control" id="peso">
-                </div>
-                <div class="input-group  mb-3 input">
-                    <span class="input-group-text">Altura:
-                    </span>
-                    <input type="text" id="altura" class="form-control">
+            <h3 class="titulo text-warning "> Calcule seu - IMC </h3>
 
-                </div>
-
-                <button class="btn  mb-3 btn-outline-primary" id="calcular">Calcular Agora</button>
-
-                <div class="input-group  mb-3 mr-1">
-
-                    <textarea class="resultado form-control" aria-label="With textarea resultado"
-                        id="resultado"></textarea>
-                </div>
+            <div class="input-group mb-3 nome input">
+                <span class="input-group-text" id="basic-addon1 ">Nome:</span>
+                <input type="text" class="form-control " id="nome">
+            </div>
+            <div class="input-group  mb-3 input">
+                <span class="input-group-text">Peso:</span>
+                <input type="text" class="form-control" id="peso">
+            </div>
+            <div class="input-group  mb-3 input">
+                <span class="input-group-text">Altura:
+                </span>
+                <input type="text" id="altura" class="form-control">
 
             </div>
+
+            <button class="btn  mb-3 btn-outline-primary" id="calcular">Calcular Agora</button>
+
+            <div class="input-group  mb-3 mr-1">
+
+                <textarea class="resultado form-control" aria-label="With textarea resultado" id="resultado"></textarea>
+            </div>
+
+
         </div>
 
-        <div class="card col-6 shadow mx-auto text-center" style="width: 18rem;">
-            <div class="card-body">
+        <div class="card  p-1 shadow mx-auto text-center" style="width: 18rem;">
+            <div class="card-body ">
                 <h5 class="card-title">O que é IMC ?</h5>
 
                 <p class="card-text">O IMC é uma medida importante para detectar problemas de saúde relacionados ao
@@ -128,8 +108,8 @@
 
             </div>
 
-        
-    </div>
+
+        </div>
     </div>
 
 
